...
                    self.resetSystem(with: self.person2)
                }
            } else if currentPerson?.id == 2 {
                let compatibilityResult = calculateCompatibility(with: person1,
                                                                       and: person2)
                let compatibilityResultString = "You two are \(compatibilityResult)% compatible."
                showAlertWithOk(with: "Results",
                                and: compatibilityResultString) {
                                    self.resetSystem(with: self.person1)
                }
            }
        }
    }
...
